# server-lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HTTP2_PROGRESS.md  build.sh  build_openssl.sh  build_release.sh  diff.txt  known_hosts  main.cpp  readme.md  refctor.md  test_h2_client.py
app/: CMakeLists.txt
core/app/: CMakeLists.txt
core/base/: CMakeLists.txt
core/core/: CMakeLists.txt
core/logger/: CMakeLists.txt
core/plugin_host/: CMakeLists.txt
libs/redis_cli/: CMakeLists.txt
libs/rpc/: CMakeLists.txt
libs/ssh_cli/: CMakeLists.txt
logger/: CMakeLists.txt  readme.md
logger/config/: log_cfg.json
logger/include/: async_appender.h  color.h  console_logger.h  file_logger.h  formatter.h  log.h  log_config.h  logger.h  logger_factory.h  net_logger.h  pipeline.h  registry.h  renderer.h
logger/net/: CMakeLists.txt  net_logger.cpp  net_logger.h  net_logger_register.h
logger/src/: async_appender.cpp  console_logger.cpp  file_logger.cpp  formatter.cpp  log.cpp  log_config.cpp  logger_factory.cpp  registry.cpp
plugins/: CMakeLists.txt
plugins/bridge/: CMakeLists.txt
plugins/core/: CMakeLists.txt
plugins/examples/: CMakeLists.txt
plugins/helloworld/: helloworld.cpp  helloworld.h
plugins/host/: CMakeLists.txt
plugins/lua/: CMakeLists.txt
plugins/lua_wrap/: CMakeLists.txt
plugins/quickjs_wrap/: CMakeLists.txt
plugins/typescript/: CMakeLists.txt
protocol/bit_torrent/: CMakeLists.txt  DESIGN.md
protocol/dns/: CMakeLists.txt
protocol/ftp/: CMakeLists.txt
protocol/http/: CMakeLists.txt  REFACTOR_PLAN.md
protocol/mqtt/: CMakeLists.txt  README.md
protocol/rtc/: CMakeLists.txt
protocol/rtcp/: CMakeLists.txt
release/: CMakeLists.txt
release/bt_downloader/: CMakeLists.txt  README.md  config.json  gate.ps1  gate.sh  health_check.ps1  health_check.sh  main.cpp  start.ps1  start.sh  stop.ps1  stop.sh
release/dns/: CMakeLists.txt  README.md  config.json  dns_server_main.cpp  gate.ps1  gate.sh  health_check.ps1  health_check.sh  manifest.json.in  start.ps1  start.sh  stop.ps1  stop.sh
release/filesync/: CMakeLists.txt  README.md  client_config.json  filesync_common.h  filesync_many_tree_e2e.ps1  filesync_peer.cpp  filesync_tests.cpp  server_config.json  validate_local.sh
release/ftp/: CMakeLists.txt  README.md  config.json  ftp_cli_main.cpp  ftp_server_main.cpp  health_check.sh  start.sh  stop.sh
release/mini_nginx/: CMakeLists.txt  README.md  gate.sh  health_check.sh  main.cpp  mini_nginx.json  mini_nginx_app.cpp  mini_nginx_app.h  mini_nginx_cli.cpp  mini_nginx_common.cpp  mini_nginx_common.h  mini_nginx_config.cpp  mini_nginx_runtime.cpp  start.sh  stop.sh
release/mqtt/: CMakeLists.txt  config.json  mqtt_business_example.cpp  mqtt_business_example.h  mqtt_business_factory.cpp  mqtt_business_factory.h  mqtt_business_handler.cpp  mqtt_business_handler.h  mqtt_business_options.h  mqtt_business_routes.cpp  mqtt_business_routes.h  mqtt_server_app.cpp  mqtt_server_app.h  mqtt_server_main.cpp
release/nas/: CLIENTS.md  CMakeLists.txt  README.md  config.json  gate.ps1  gate.sh  generate_password_hash.ps1  health_check.ps1  health_check.sh  init_config.ps1  nas_server_main.cpp  start.ps1  start.sh  stop.ps1  stop.sh
release/proxy/: CMakeLists.txt  PRODUCTION_READINESS.md  README.md  SOAK_GUIDE.md  config.json  health_check.sh  proxy_server_main.cpp  proxy_tool_main.cpp  run_proxy_soak.ps1  run_proxy_stream_soak.ps1  start.sh  stop.sh
release/rtsp/: CMakeLists.txt  README.md  config.json  health_check.ps1  health_check.sh  rtsp_server_config.cpp  rtsp_server_config.h  rtsp_server_main.cpp  start.ps1  start.sh  stop.ps1  stop.sh
release/ssh/: CMakeLists.txt  README.md  config.json  health_check.sh  ssh_cli_main.cpp  ssh_server_main.cpp  start.sh  stop.sh
release/webrtc/: CMakeLists.txt  README.md  config.json  health_check.ps1  health_check.sh  start.ps1  start.sh  stop.ps1  stop.sh  webrtc_server_main.cpp
test/: CGuildSearchHelper.cpp  CGuildSearchHelper.h  CGuildSearchHelper_t.h  CMakeLists.txt  CmakeLists.txt  README.md  SearchHelper.cpp  SearchHelper.h  run_ftp_e2e.bat  test_async_facades.cpp  test_bit_torrent.cpp  test_coroutine_runtime.cpp  test_dns.cpp  test_dns_client.cpp  test_dns_e2e.cpp  test_dns_regression.cpp  test_dns_server.cpp  test_dns_simple.cpp  test_fix_verification.cpp  test_ftp_client.cpp  test_ftp_commands.cpp  test_ftp_e2e.cpp  test_ftp_e2e_client.cpp  test_ftp_e2e_server.cpp  test_ftp_interactive.cpp  test_ftp_interactive_improved.cpp  test_ftp_server.cpp  test_ftp_server_with_client.cpp  test_http_client.cpp  test_http_server.cpp  test_logger.cpp  test_logger_auto.cpp  test_lua_plugin.cpp  test_mqtt.cpp  test_net_logger.cpp  test_plugin.cpp  test_plugin_contracts.cpp  test_plugin_governance.cpp  test_smb.cpp  test_socks5.cpp  (+4 more)
test/benchmark/: CMakeLists.txt  core_runtime_benchmark.cpp  game_benchmark.cpp  game_iocp_benchmark.cpp  http_worker_pool_benchmark.cpp  simple_search_benchmark.cpp
test/common/: winsock_guard.h
test/core/: CMakeLists.txt  test_async_facades.cpp  test_async_listener_shutdown.cpp  test_base64.cpp  test_base_utilities.cpp  test_buffer_model.cpp  test_byte_buffer_reader.cpp  test_compressed_trie.cpp  test_connection_handle.cpp  test_coroutine_pool.cpp  test_coroutine_pool_service.cpp  test_coroutine_runtime.cpp  test_endpoint_manager.cpp  test_event_bus.cpp  test_event_token.cpp  test_in_process_worker_runtime.cpp  test_iocp_completion_port.cpp  test_ipv6_dual_stack.cpp  test_kcp_server_session.cpp  test_logger.cpp  test_logger_auto.cpp  test_native_platform.cpp  test_net_logger.cpp  test_pending_rpc_service.cpp  test_resource_usage.cpp  test_service_definition_registration.cpp  test_sharded_async_listener.cpp  test_simple_search.cpp  test_string_util.cpp  test_supervisor_reason.cpp  test_switch_coroutine.cpp  test_tcp_close_semantics.cpp  test_thread_pool.cpp  test_time_api.cpp  test_timer_backends.cpp  test_timer_lifecycle.cpp  test_udp_connection_production.cpp  test_udp_kcp_adapter.cpp  test_worker_plan.cpp
test/nas/: CMakeLists.txt  test_nas_concurrency.cpp  (+5 more)
(+1982 files in other folders)
