cmake_minimum_required(VERSION 3.12)
project(test)

add_executable(http_server test_http_server.cpp)
add_executable(http_client test_http_client.cpp)
add_executable(ftp_server test_ftp_server.cpp)
add_executable(ftp_client test_ftp_client.cpp)
add_executable(ftp_commands test_ftp_commands.cpp)
add_executable(ftp_e2e test_ftp_e2e.cpp)
add_executable(ftp_e2e_server test_ftp_e2e_server.cpp)
add_executable(ftp_server_with_client test_ftp_server_with_client.cpp)
add_executable(ftp_e2e_client test_ftp_e2e_client.cpp)
add_executable(ftp_interactive test_ftp_interactive.cpp)
add_executable(ftp_interactive_improved test_ftp_interactive_improved.cpp)
add_executable(test_fix_verification test_fix_verification.cpp)
add_executable(test_log test_logger.cpp)
add_executable(ws_svr test_websocket_server.cpp)
add_executable(ws_cli test_websocket_client.cpp)
add_executable(test_plugin test_plugin.cpp)
add_executable(test_kcp_cli test_udp_kcp_cli.cpp)
add_executable(test_kcp_svr test_udp_kcp_svr.cpp)
add_executable(test_dns test_dns.cpp)
add_executable(test_dns_simple test_dns_simple.cpp)
add_executable(test_dns_e2e test_dns_e2e.cpp)
add_executable(dns_server test_dns_server.cpp)
add_executable(dns_client test_dns_client.cpp)
add_executable(test_bit_torrent test_bit_torrent.cpp)

target_link_libraries(http_server PUBLIC HttpProto)
target_link_libraries(http_client PUBLIC HttpProto)
target_link_libraries(ftp_server PUBLIC FtpProto)
target_link_libraries(ftp_client PUBLIC FtpProto)
target_link_libraries(ftp_commands PUBLIC FtpProto)
target_link_libraries(ftp_e2e PUBLIC FtpProto)
target_link_libraries(ftp_e2e_server PUBLIC FtpProto)
target_link_libraries(ftp_e2e_client PUBLIC FtpProto)
target_link_libraries(ftp_server_with_client PUBLIC FtpProto)
target_link_libraries(ftp_interactive PUBLIC FtpProto)
target_link_libraries(ftp_interactive_improved PUBLIC FtpProto)
target_link_libraries(test_fix_verification PUBLIC FtpProto)
target_link_libraries(ftp_interactive PUBLIC FtpProto)
target_link_libraries(ws_svr PUBLIC WebSocketProto)
target_link_libraries(ws_cli PUBLIC WebSocketProto)
target_link_libraries(test_log PUBLIC Logger)
target_link_libraries(test_plugin PUBLIC Core)
target_link_libraries(test_kcp_cli PUBLIC DnsProto)
target_link_libraries(test_kcp_svr PUBLIC DnsProto)
target_link_libraries(test_dns PUBLIC DnsProto)
target_link_libraries(test_dns_simple PUBLIC DnsProto)
target_link_libraries(test_dns_e2e PUBLIC DnsProto)
target_link_libraries(dns_server PUBLIC DnsProto)
target_link_libraries(dns_client PUBLIC DnsProto)
target_link_libraries(test_bit_torrent PUBLIC BitTorrentProto)
