cmake_minimum_required(VERSION 3.12)
project(test)
include(CTest)
enable_testing()

add_executable(http_server test_http_server.cpp)
add_executable(http_client test_http_client.cpp)
add_executable(ftp_server test_ftp_server.cpp)
add_executable(ftp_client test_ftp_client.cpp)
add_executable(ftp_commands test_ftp_commands.cpp)
add_executable(ftp_e2e test_ftp_e2e.cpp)
add_executable(ftp_e2e_server test_ftp_e2e_server.cpp)
add_executable(ftp_server_with_client test_ftp_server_with_client.cpp)
add_executable(ftp_e2e_client test_ftp_e2e_client.cpp)
add_executable(ftp_interactive test_ftp_interactive.cpp)
add_executable(ftp_interactive_improved test_ftp_interactive_improved.cpp)
add_executable(test_fix_verification test_fix_verification.cpp)
add_executable(test_log test_logger.cpp)
add_executable(test_logger_auto test_logger_auto.cpp)
add_executable(test_net_logger test_net_logger.cpp)
add_executable(ws_svr test_websocket_server.cpp)
add_executable(ws_cli test_websocket_client.cpp)
add_executable(test_kcp_cli test_udp_kcp_cli.cpp)
add_executable(test_kcp_svr test_udp_kcp_svr.cpp)
add_executable(test_dns test_dns.cpp)
add_executable(test_dns_simple test_dns_simple.cpp)
add_executable(test_dns_regression test_dns_regression.cpp)
add_executable(test_dns_e2e test_dns_e2e.cpp)
add_executable(dns_server test_dns_server.cpp)
add_executable(dns_client test_dns_client.cpp)
add_executable(test_bit_torrent test_bit_torrent.cpp)
add_executable(test_udp_tracker_coroutine test_udp_tracker_coroutine.cpp)
add_executable(test_coroutine_runtime test_coroutine_runtime.cpp)
add_executable(test_supervisor_reason test_supervisor_reason.cpp)
add_executable(test_event_bus test_event_bus.cpp)
add_executable(test_buffer_model test_buffer_model.cpp)
add_executable(test_byte_buffer_reader test_byte_buffer_reader.cpp)
add_executable(test_time_api test_time_api.cpp)
add_executable(test_plugin_contracts test_plugin_contracts.cpp)

target_link_libraries(http_server PUBLIC HttpProto ServerServices)
target_link_libraries(http_client PUBLIC HttpProto)
target_link_libraries(ftp_server PUBLIC FtpProto ServerServices)
target_link_libraries(ftp_client PUBLIC FtpProto)
target_link_libraries(ftp_commands PUBLIC FtpProto)
target_link_libraries(ftp_e2e PUBLIC FtpProto)
target_link_libraries(ftp_e2e_server PUBLIC FtpProto)
target_link_libraries(ftp_e2e_client PUBLIC FtpProto)
target_link_libraries(ftp_server_with_client PUBLIC FtpProto)
target_link_libraries(ftp_interactive PUBLIC FtpProto)
target_link_libraries(ftp_interactive_improved PUBLIC FtpProto)
target_link_libraries(test_fix_verification PUBLIC FtpProto)
target_link_libraries(ftp_interactive PUBLIC FtpProto)
target_link_libraries(ws_svr PUBLIC WebSocketProto ServerServices)
target_link_libraries(ws_cli PUBLIC WebSocketProto)
target_link_libraries(test_log PUBLIC Logger)
target_link_libraries(test_logger_auto PUBLIC Logger)
target_link_libraries(test_net_logger PUBLIC NetLogger)
if(TARGET PluginHost)
    add_executable(test_plugin test_plugin.cpp)
    target_link_libraries(test_plugin PUBLIC App PluginHost PluginBridge ServerServices)
    if(TARGET HelloWorld)
        add_dependencies(test_plugin HelloWorld)
    endif()
endif()
target_link_libraries(test_kcp_cli PUBLIC DnsProto)
target_link_libraries(test_kcp_svr PUBLIC DnsProto)
target_link_libraries(test_dns PUBLIC DnsProto)
target_link_libraries(test_dns_simple PUBLIC DnsProto)
target_link_libraries(test_dns_regression PUBLIC DnsProto)
target_link_libraries(test_dns_e2e PUBLIC DnsProto)
target_link_libraries(dns_server PUBLIC DnsProto)
target_link_libraries(dns_client PUBLIC DnsProto)
target_link_libraries(test_bit_torrent PUBLIC BitTorrentProto)
target_link_libraries(test_udp_tracker_coroutine PUBLIC BitTorrentProto)
target_link_libraries(test_coroutine_runtime PUBLIC Core)
target_link_libraries(test_supervisor_reason PUBLIC App)
target_link_libraries(test_event_bus PUBLIC Core)
target_link_libraries(test_buffer_model PUBLIC Core)
target_link_libraries(test_byte_buffer_reader PUBLIC Core)
target_link_libraries(test_time_api PUBLIC Core)
target_link_libraries(test_plugin_contracts PUBLIC App PluginHost)

if (BUILD_TESTING)
    add_test(NAME logger_auto COMMAND test_logger_auto)
    add_test(NAME net_logger_auto COMMAND test_net_logger)
    add_test(NAME coroutine_runtime COMMAND test_coroutine_runtime)
    add_test(NAME event_bus COMMAND test_event_bus)
    add_test(NAME buffer_model COMMAND test_buffer_model)
    add_test(NAME byte_buffer_reader COMMAND test_byte_buffer_reader)
    add_test(NAME time_api COMMAND test_time_api)
    add_test(NAME supervisor_reason COMMAND test_supervisor_reason)
    add_test(NAME dns_regression COMMAND test_dns_regression)
    add_test(NAME udp_tracker_coroutine COMMAND $<TARGET_FILE:test_udp_tracker_coroutine>)
    add_test(NAME plugin_contracts COMMAND test_plugin_contracts)
    if(TARGET test_plugin)
        add_test(NAME plugin_host_smoke COMMAND test_plugin)
    endif()
endif()
